--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "zkevm_common"
+name = "a3_zkevm_common"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", branch = "main", features = ["warn-unimplemented"] }
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a3_pi" }
 hyper = { version = "0.14.16", features = ["server"] }
 log = "0.4.14"
 serde = { version = "1.0.136", features = ["derive"] }
