--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -1,46 +1,41 @@
 [package]
-name = "a3_prover"
+name = "prover"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_10_22" }
-bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a3_pi" }
-eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a3_pi" }
-zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a3_pi", features = [
-  "test",
-] }
-snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier", tag = "v2022_12_23", default-features = false, features = [
-  "loader_evm",
-  "loader_halo2",
-  "system_halo2",
-] }
+halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
+bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", features = ["test"] }
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", features = ["warn-unimplemented"] }
+zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", features = ["test-circuits"] }
+snark-verifier = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = ["loader_halo2", "system_halo2", "loader_evm", "parallel"] }
+snark-verifier-sdk = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = ["loader_halo2", "loader_evm", "parallel", "display", "halo2_circuit_params"] }
 
 env_logger = "0.9.0"
+tracing = "0.1.30"
+tracing-subscriber = "0.3.8"
 ethers-providers = "2.0.0"
 hyper = { version = "0.14.16", features = ["server"] }
 rand_xorshift = "0.3"
 log = "0.4.14"
 rand = "0.8.4"
-lazy_static = "1.4.0"
-tracing = "0.1.30"
 serde = { version = "1.0.136", features = ["derive"] }
-serde_json = "1.0.96"
+serde_json = "1.0.78"
 strum = "0.24"
 tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
-a3_zkevm_common = { path = "../common" }
+zkevm_common = { path = "../common" }
 itertools = "0.10.3"
 clap = { version = "4.0.14", features = ["derive", "env"] }
 hex = "0.4.3"
-rlp = "0.5.2"
+lazy_static = "1.4.0"
 
 # autogen
-mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a3_pi", optional = true }
-
+mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", optional = true }
 ethers-signers = { version = "2.0.0", optional = true }
 zkevm_dev = { path = "../dev", optional = true }
+paste = { version = "1.0.11", optional = true }
 
 [features]
 default = []
-autogen = ["mock", "ethers-signers", "zkevm_dev"]
+autogen = ["mock", "ethers-signers", "zkevm_dev", "paste"]
