--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -6,9 +6,10 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
-bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", features = ["test"] }
-eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", features = ["warn-unimplemented"] }
-zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", features = ["test-circuits"] }
+bus-mapping = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = ["test"] }
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = ["warn-unimplemented"] }
+zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = ["test-circuits"] }
+circuit-benchmarks = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", features = [] }
 snark-verifier = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = ["loader_halo2", "system_halo2", "loader_evm", "parallel"] }
 snark-verifier-sdk = { git = "https://github.com/brechtpd/snark-verifier.git", branch = "feat/add-sdk", default-features = false, features = ["loader_halo2", "loader_evm", "parallel", "display", "halo2_circuit_params"] }
 
@@ -16,6 +17,7 @@ env_logger = "0.9.0"
 tracing = "0.1.30"
 tracing-subscriber = "0.3.8"
 ethers-providers = "2.0.0"
+ethers-core = "2.0.0"
 hyper = { version = "0.14.16", features = ["server"] }
 rand_xorshift = "0.3"
 log = "0.4.14"
@@ -31,7 +33,7 @@ hex = "0.4.3"
 lazy_static = "1.4.0"
 
 # autogen
-mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a4-aggregation", optional = true }
+mock = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/a5-testnet", optional = true }
 ethers-signers = { version = "2.0.0", optional = true }
 zkevm_dev = { path = "../dev", optional = true }
 paste = { version = "1.0.11", optional = true }
