--- a/dev/Cargo.toml
+++ b/dev/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", branch = "feat/for-a6-release", features = [
+eth-types = { git = "https://github.com/taikoxyz/zkevm-circuits.git", rev = "4314b27fdddd3770f1c9e6bcd28ad83bcc6571c7", features = [
     "warn-unimplemented",
 ] }
 serde = { version = "1.0.136", features = ["derive"] }
